# membridge

./: .gitignore  .replit  DEPLOY.md  DEPLOYMENT.md  MIGRATION.md  Makefile  README.md  config.env.example  install.ps1  install.sh  migration-report.json  optimization-profile-orange.sh  package-lock.json  package.json  pyproject.toml  replit.md  run-agent.sh  run-server.sh  run.py  sqlite_minio_sync.py  validate-env.sh
.claude/sessions/: go-rewrite-handoff.md
agent/: main.py
attached_assets/: docs_fulel_1772037186405.md  docs_full-1_1772050156933.md  docs_full-membridge_1772041945210.md  docs_full_1772059335746.md
claude-home/: CLAUDE.md
claude-home/hooks/: CLAUDE.md  claude-session-cleanup.sh  context-drift-detection.sh  post-execution-verification.sh  pre-execution-validation.sh
docs/: arm64-claude-mem.md  auto-heartbeat.md  leadership.md  migration.md  sync-modes.md  web-ui.md  ІНДЕКС.md
hooks/: claude-mem-doctor  claude-mem-hook-pull  claude-mem-hook-push  claude-mem-pull  claude-mem-push  claude-mem-status
membridge/: __init__.py  validate_install.py
migration-package/: BLOOM_RUNTIME_MIGRATION_BUNDLE.md  ІНСТРУКЦІЯ_МІГРАЦІЇ.md  ІНТЕГРАЦІЯ_ФРОНТЕНДУ.md  ПРОМПТ_ДЛЯ_АГЕНТА.md
prompts/: update-orange-pi.md
scripts/: bootstrap-alpine.sh  bootstrap-linux.sh  bootstrap-windows.ps1  claude-cleanup-safe  verify_claude_mem.sh  verify_heartbeat.sh  verify_hooks_override.sh  verify_leadership.sh
server/: auth.py  db.ts  jobs.py  logging_config.py  main.py  routes.ts  storage.ts
shared/: schema.ts
tests/: test_api.py  test_leadership.py
(+52 files in other folders)
